# tap-xero

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.sample.json  meltano.yml  pyproject.toml
tap_xero/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_auth.py  test_core.py  test_proxy_oauth_behavior.py
