[tool.poetry]
name = "tap-xero"
version = "3.0.0"
description = "Singer tap for Xero, built with the Meltano Singer SDK"
authors = ["Matatika"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Matatika/tap-xero"
repository = "https://github.com/Matatika/tap-xero"
keywords = ["Xero", "Singer", "Meltano", "ELT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
singer-sdk = "~=0.53.4"
requests = "~=2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
tap-xero = "tap_xero.tap:TapXero.cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
