[project]
name = "tap-xero"
version = "3.0.0"
description = "Singer tap for Xero, built with the Meltano Singer SDK"
authors = [ { name = "Matatika" } ]
license = "Apache-2.0"
readme = "README.md"
keywords = ["Xero", "Singer", "Meltano", "ELT"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests~=2.32.0",
    "singer-sdk~=0.53.4",
    "typing-extensions~=4.15.0 ; python_version < \"3.12\"",
]

[project.scripts]
tap-xero = "tap_xero.tap:TapXero.cli"

[project.urls]
homepage = "https://github.com/Matatika/tap-xero"
repository = "https://github.com/Matatika/tap-xero"

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9",
    "ruff>=0.14.9",
    "ty>=0.0.2",
    "types-requests>=2.31.0",
]

[tool.poetry]
requires-poetry = ">=2.2"

[build-system]
requires = ["poetry-core>=2.2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "FA",   # flake8-future-annotations
    "I",    # isort
    "RET",  # flake8-return
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
