[project]
name = "tap-xero"
dynamic = [ "version" ]
description = "Singer tap for Xero, built with the Meltano Singer SDK"
authors = [{ name = "Matatika" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "Xero",
    "Singer",
    "Meltano",
    "ELT",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests~=2.32.0",
    "singer-sdk~=0.53.4",
    'typing-extensions~=4.15.0 ; python_version < "3.12"',
]

[project.urls]
homepage = "https://github.com/Matatika/tap-xero"
repository = "https://github.com/Matatika/tap-xero"

[project.scripts]
tap-xero = "tap_xero.tap:TapXero.cli"

[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs>=0.5.0",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9",
    "responses>=0.25.0",
    "ruff>=0.14.9",
    "ty>=0.0.2",
    "types-requests>=2.31.0",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "FA",   # flake8-future-annotations
    "I",    # isort
    "RET",  # flake8-return
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
